manifests/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        volumeMounts:
        - name: pg-storage        # Nome arbitrario del volume
          mountPath: /var/lib/postgresql/data # Percorso interno al container
      volumes:
      - name: pg-storage          # Deve corrispondere a volumeMounts.name
        persistentVolumeClaim:
          claimName: postgres-pvc # Deve corrispondere al metadata.name nel file PVC
