manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
      - name: linkwarden
        image: ghcr.io/linkwarden/linkwarden:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden-service
  namespace: linkwarden-ns
spec:
  type: ClusterIP
  selector:
    app: linkwarden
  ports:
    - port: 80
      targetPort: 3000
