manifests/meili.yaml
# 2. IL PROCESSO (Deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
      - name: meilisearch
        image: getmeili/meilisearch:v1.12.8
        ports:
        - containerPort: 7700
        volumeMounts:
        - name: meili-data
          mountPath: /meili_data # Percorso dove Meilisearch salva i dati
      volumes:
      - name: meili-data
        persistentVolumeClaim:
          claimName: meili-pvc
---
# 3. IL PUNTO DI ACCESSO (Service)
apiVersion: v1
kind: Service
metadata:
  name: meilisearch # Questo nome sarà l'hostname usato da Linkwarden
  namespace: default
spec:
  selector:
    app: meilisearch
  ports:
    - protocol: TCP
      port: 7700
      targetPort: 7700
